Lambo after script.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
+/.idea
+/.vagrant
+/.vscode
 /node_modules
+/public/css
+/public/fonts
 /public/hot
+/public/js
+/public/mix-manifest.json
 /public/storage
 /storage/*.key
+/storage/debugbar
 /vendor
 .env
-.phpunit.result.cache
+.tags
+.tags1
 Homestead.json
 Homestead.yaml
 npm-debug.log
