--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "eslint-plugin-promise": "^4.1.1",
         "eslint-plugin-standard": "^4.0.0",
         "eslint-plugin-vue": "^5.2.2",
+        "highlight.js": "^9.15.6",
         "laravel-mix": "^4.0.7",
+        "laravel-mix-purgecss": "^4.1.0",
         "lodash": "^4.17.5",
         "prettier": "^1.17.1",
         "prettier-eslint": "^8.8.2",
@@ -30,6 +32,7 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
+        "tailwindcss": "^1.0.1",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     }
